<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/halamanUtama"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainTitleCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/lightOrange">

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="300dp"
            android:text="@string/judul"
            android:textColor="@color/white"
            android:textSize="14pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subjudul"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="265dp"
            android:text="@string/subjudul"
            android:textColor="@color/white"
            android:textSize="6pt"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/logopolinema"
            android:layout_marginBottom="100dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/mainTitle2Card"
        android:layout_width="360dp"
        android:layout_height="35dp"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="20dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="@color/white">


        <EditText
            android:id="@+id/edtnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:hint="Nama"
            android:inputType="text"
            android:textColor="@color/black"
            android:text=""
            android:textSize="6pt" />


        <ImageView
            android:layout_marginRight="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_login"/>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mainTitle3Card"
            android:layout_width="360dp"
            android:layout_height="35dp"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/white">


            <EditText
                android:id="@+id/hedtpswrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:text=""
                android:textSize="6pt" />


            <ImageView
                android:layout_marginRight="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/lupapswrd"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="153dp"
            android:layout_marginLeft="90dp"
            android:text="@string/textPassword"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="6pt"/>
        <ImageButton
            android:id="@+id/redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right_arrow"
            android:background="@color/lightOrange"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="353dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="230dp"
            android:textSize="15dp"
            android:text="@string/login"
            android:backgroundTint="@color/DeepPink"/>

        <TextView
            android:id="@+id/signin"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="660dp"
            android:layout_marginLeft="40dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="6pt"/>

        <Button
            android:id="@+id/daftar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="132dp"
            android:textSize="15dp"
            android:text="@string/SignIn"/>

    </androidx.cardview.widget.CardView>
</LinearLayout>